# pixel-mining

./: .gitignore  LICENSE  README.md  pyproject.toml
pixel_mining/: __init__.py  __main__.py  core.py  geometry.py
