[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pixel-mining"
version = "0.1.0"
description = "Educational SHA-256 pixel mining: core technique plus a simple runnable example"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Mariusz Brucki" },
]
keywords = ["generative-art", "proof-of-work", "sha256", "pixel-art", "cryptographic-art"]

dependencies = [
    "Pillow",
    "numpy",
]

[project.urls]
Homepage = "https://determined.ink"

[tool.setuptools.packages.find]
include = ["pixel_mining*"]
